--- a/_config.yml
+++ b/_config.yml
@@ -6,16 +6,16 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title:  纯洁的微笑
-subtitle: 分享技术，品味人生
-name: 纯洁的微笑 
-email: ityouknow@126.com
-description: 本站是纯洁的微笑的技术分享博客。内容涵盖生活故事、Java后端技术、Spring Boot、Spring Cloud、微服务架构、大数据演进、高可用架构、中间件使用、系统监控等相关的研究与知识分享。
-keywords: ityouknow,纯洁的微笑,Spring,Spring Boot,Spring Cloud,MongoDB,Jvm,Docker,生活故事,架构,大数据,一线,FastDFS,开发者,编程,代码,开源,IT网站,Developer,Programmer,Coder,Geek,IT技术博客,Java,Python,
+title:  南宫燚滨
+subtitle: 耕耘不断，晟功在望
+name: 南宫燚滨 
+email: nangongyibin@gmail.com
+description: 人生最幸福的四件事：有人信你、有人爱你、有人帮你、有人懂你。遇见不论早晚，真心才能相伴；朋友不论远近，懂得才有温暖。轰轰烈烈的，未必是真心；默默无声的，未必是无心。把一切交给时间，总会有答案。平淡中的相守，才最珍贵；简单中的拥有，才最心安！说的再好不如做的好。感恩生命中信我、爱我、懂我、帮我的人。
+keywords: 南宫燚滨,Android,
 encoding: "utf-8"
 favicon: favicon.ico 
 
-repository: ityouknow/ityouknow.github.io
+repository: nangongyibin7219/nangongyibin7219.github.io
 github_url: https://github.com/ityouknow
 url: http://www.ityouknow.com
 enforce_ssl: ityouknow.com
