更新友链和增加一个新的分类Android-Activity

--- a/_config.yml
+++ b/_config.yml
@@ -94,6 +94,15 @@ navs:
     href: /
     label: Home
 
+  - href: /Activity.html
+    label: Android
+    target: _self
+    subnav:
+
+       -
+        subHref: /Activity.html
+        subLabel: Activity
+
   -
     href: /spring-boot.html
     label: Spring Boot
