了解了一下androidstudio中的build目录的一些属性。

--- a/_config.yml
+++ b/_config.yml
@@ -104,6 +104,10 @@ navs:
         subHref: /Activity.html
         subLabel: Activity
 
+       -
+        subHref: /other.html
+        subLabel: Other
+
 
 
   -
