更新了几篇关于Activity活动的介绍及配置文件的属性

--- a/_config.yml
+++ b/_config.yml
@@ -105,6 +105,10 @@ navs:
         subLabel: Activity
 
        -
+        subHref: /Layout.html
+        subLabel: 控件
+
+       -
         subHref: /Kotlin.html
         subLabel: Kotlin
 
