--- a/_config.yml
+++ b/_config.yml
@@ -245,16 +245,16 @@ disqus:
     username: nangongyibin
 # https://imsun.net/posts/gitment-introduction/
 gitment:
-    owner: nangongyibin
+    owner: ityouknow
     repo: blog-comments
     oauth:
         client_id: 61bfc53d957e74e78f8f
         client_secret: 31c61e66cdcc9ada8db2267ee779d0bdafac434c
 # https://github.com/gitalk/gitalk#install
 gitalk:
-    owner: nangongyibin
+    owner: ityouknow
     repo: blog-comments
-    clientID: b16fe83190c665c4af34
-    clientSecret: 58ba170c05de517687dc937948dbca53021f343e
+    clientID: 61bfc53d957e74e78f8f
+    clientSecret: 31c61e66cdcc9ada8db2267ee779d0bdafac434c
 # 在使用其它评论组件时可点击显示 Disqus
 lazy_load_disqus : true
