--- a/_config.yml
+++ b/_config.yml
@@ -242,7 +242,7 @@ comments_provider: gitalk
 # !!!Important!!! Please modify infos below to yours
 # https://disqus.com
 disqus:
-    username: ityouknow
+    username: nangongyibin
 # https://imsun.net/posts/gitment-introduction/
 gitment:
     owner: nangongyibin7219
