--- a/_config.yml
+++ b/_config.yml
@@ -246,14 +246,14 @@ disqus:
 # https://imsun.net/posts/gitment-introduction/
 gitment:
     owner: nangongyibin7219
-    repo: blog-comments
+    repo: nangongyibin7219.github.io
     oauth:
         client_id: b16fe83190c665c4af34
         client_secret: 58ba170c05de517687dc937948dbca53021f343e
 # https://github.com/gitalk/gitalk#install
 gitalk:
     owner: nangongyibin7219
-    repo: blog-comments
+    repo: nangongyibin7219.github.io
     clientID: b16fe83190c665c4af34
     clientSecret: 58ba170c05de517687dc937948dbca53021f343e
 # 在使用其它评论组件时可点击显示 Disqus
