vim一些使用方式介绍

--- a/_config.yml
+++ b/_config.yml
@@ -196,6 +196,11 @@ classes:
     href: /kotlin.html
     name: Kotlin
     describe: Android 官方开发语言
+    
+  -
+    href: /art.html
+    name: 窍门
+    describe: 生活中节时全靠它
 
 
 
