--- a/_config.yml
+++ b/_config.yml
@@ -86,6 +86,10 @@ navs:
        -
         subHref: /database.html
         subLabel: 数据库
+        
+       -
+        subHref: /netlib.html
+        subLabel: 网络库
 
        -
         subHref: /kotlin.html
