--- a/_config.yml
+++ b/_config.yml
@@ -84,6 +84,12 @@ navs:
         subHref: /broadcastreceiver.html
         subLabel: 广播接收者
         
+
+       -
+        subHref: /service.html
+        subLabel: 服务
+        
+        
        -
         subHref: /layout.html
         subLabel: 控件
