fragment的简单使用

--- a/_config.yml
+++ b/_config.yml
@@ -81,6 +81,11 @@ navs:
 
 
        -
+        subHref: /fragment.html
+        subLabel: Fragment
+
+
+       -
         subHref: /broadcastreceiver.html
         subLabel: 广播接收者
         
