--- a/_config.yml
+++ b/_config.yml
@@ -168,6 +168,10 @@ navs:
         subHref: /html.html
         subLabel: HTML
 
+      -
+        subHref: /css.html
+        subLabel: CSS
+
   -
     href: /c.html
     label: C/C++
