--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,8 @@ keywords: 南宫燚滨,Android
 encoding: "utf-8"
 favicon: favicon.ico 
 
-repository: nangongyibin7219/nangongyibin7219.github.io
-github_url: https://github.com/nangongyibin7219
+repository: nangongyibin/nangongyibin.github.io
+github_url: https://github.com/nangongyibin
 url: http://www.nangongyibin.com
 enforce_ssl: nangongyibin.com
 
@@ -248,15 +248,15 @@ disqus:
     username: nangongyibin
 # https://imsun.net/posts/gitment-introduction/
 gitment:
-    owner: nangongyibin7219
-    repo: nangongyibin7219.github.io
+    owner: nangongyibin
+    repo: nangongyibin.github.io
     oauth:
         client_id: b16fe83190c665c4af34
         client_secret: 58ba170c05de517687dc937948dbca53021f343e
 # https://github.com/gitalk/gitalk#install
 gitalk:
-    owner: nangongyibin7219
-    repo: nangongyibin7219.github.io
+    owner: nangongyibin
+    repo: nangongyibin.github.io
     clientID: b16fe83190c665c4af34
     clientSecret: 58ba170c05de517687dc937948dbca53021f343e
 # 在使用其它评论组件时可点击显示 Disqus
