学习echarts并做个笔记

--- a/_config.yml
+++ b/_config.yml
@@ -171,6 +171,10 @@ navs:
       -
         subHref: /css.html
         subLabel: CSS
+        
+      -
+        subHref: /echarts.html
+        subLabel: Echarts
 
   -
     href: /c.html
