--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ favicon: favicon.ico
 
 repository: nangongyibin/nangongyibin.github.io
 github_url: https://github.com/nangongyibin
-url: http://www.nangongyibin.com
+url: http://all.nangongyibin.com
 enforce_ssl: nangongyibin.com
 
 ## Gem
